--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,18 @@
 body {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  align-self: center;
+  background-color: #7f9694;
   margin: 0;
   padding: 0;
   font-family: sans-serif;
+}
+
+.search{
+
+}
+
+input{
+
 }
