--- a/src/index.css
+++ b/src/index.css
@@ -3,10 +3,20 @@ body {
   justify-content: center;
   align-items: center;
   align-self: center;
-  background-color: #b8c2c3;
+  background-color: #e6e8e8;
   margin: 0;
   padding: 0;
   font-family: sans-serif;
+}
+.filtered {
+  padding-top: 23%;
+}
+
+h1{
+  color: #353f45;
+  text-align: center;
+  font-size: 48px;
+  font-weight: 100;
 }
 
 .search{
@@ -14,20 +24,31 @@ body {
 }
 
 input{
+height: 40px;
+padding: 5px;
 width: 320px;
+padding-left: 20px;
+border-color: grey;
 border-radius: 4px;
+font-size: 20px;
+background-color: #e6e8e8;
 
 }
 
 .list{
-  width: 328px;
-  height:400px;
+  width: 350px;
+  height:460px;
   overflow-y: auto;
+  border: 1px solid grey;
+  border-radius: 5px;
+  margin-top: 30px;
+  background-color: white;
+  color: #353f45;
 }
 
 .erkir{
-  height: 20px;
-  padding: 6px;
-  font-size: 16px;
+
+  padding: 18px;
+  font-size: 23px;
   border-bottom: 1px solid grey;
 }
