--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,7 @@ body {
   justify-content: center;
   align-items: center;
   align-self: center;
-  background-color: #7f9694;
+  background-color: #b8c2c3;
   margin: 0;
   padding: 0;
   font-family: sans-serif;
@@ -14,5 +14,20 @@ body {
 }
 
 input{
+width: 320px;
+border-radius: 4px;
 
+}
+
+.list{
+  width: 328px;
+  height:400px;
+  overflow-y: auto;
+}
+
+.erkir{
+  height: 20px;
+  padding: 6px;
+  font-size: 16px;
+  border-bottom: 1px solid grey;
 }
